[project]
name = "manim-kor"
version = "0.1.0"
description = "Imcommit manim projects"
readme = "README.md"
requires-python = "==3.11.7"
dependencies = [
    "manim==0.19.0",
    "raenim",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
]

[tool.uv.sources]
raenim = { git = "https://github.com/CodingVillainKor/raenim.git" }
